provision/k8s/Deployment-yo.yml
---

apiVersion: v1
kind: Service
metadata:
  name: yo
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: yo

---

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: yo
  labels:
    app: yo
spec:
  selector:
    matchLabels:
      app: yo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: yo
    spec:
      containers:
      - image: us.gcr.io/dark-berm-205620/yo
        name: yo
        ports:
        - containerPort: 8080
          name: yo
        livenessProbe:
          httpGet:
            path: /v1/user/list
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 2
          periodSeconds: 15
