provision/k8s/Ingress-yo.yml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: yo-ingress-config
    namespace: default
  spec:
    rules:
      - http:
          paths:
            - path: /
              backend:
                serviceName: yo
                servicePort: 8080
